# mybsdiff

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/inke/mybsdiff/: MainActivity.java
app/src/main/java/com/inke/mybsdiff/utils/: UriParseUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/wrapper/: gradle-wrapper.properties
